# rust-blackhat

./: .gitignore  example.bc  example.ll  example_dis.ll
assembly_rust/: Cargo.toml
assembly_rust/src/: main.rs
async_scanner/: Cargo.toml
async_scanner/src/: main.rs  ports.rs  subdomains.rs
bin_lib/src/: bin.rs  lib.rs
end-to-end-cia/: Cargo.toml
end-to-end-cia/agent/: Cargo.toml
end-to-end-cia/agent/src/: config.rs  error.rs  init.rs  main.rs  run.rs
end-to-end-cia/client/: Cargo.toml
end-to-end-cia/client/src/: api.rs  config.rs  error.rs  main.rs
end-to-end-cia/client/src/api/: get_agent.rs  job_functions.rs  mod.rs
end-to-end-cia/client/src/cli/: exec.rs  identity.rs  mod.rs
end-to-end-cia/common/: Cargo.toml
end-to-end-cia/common/src/: api.rs
end-to-end-cia/server/: Cargo.toml
end-to-end-cia/server/src/: config.rs  entities.rs  error.rs  main.rs
end-to-end-cia/server/src/repository/: jobs.rs
end-to-end-cia/server/src/service/: jobs.rs  mod.rs
executor/src/: main.rs
exploits_rust/: Cargo.toml
explot_cve_2019_11229/: Cargo.toml
explot_cve_2019_11229/src/: main.rs
fuzzing/: Cargo.toml
fuzzing/fuzz/: Cargo.toml  mod.rs
fuzzing/src/: lib.rs
libc_exit/: Cargo.toml
libc_exit/src/: main.rs
mmap_shell/: Cargo.toml
mmap_shell/src/: main.rs
module_scanner/: Cargo.toml
module_scanner/src/: cli.rs  error.rs  main.rs  ports.rs
nostd/: Cargo.toml
nostd/.cargo/: config.toml
nostd/src/: main.rs
port_scanner/: Cargo.toml
rust-rat/: .env  .gitignore  Cargo.toml  README.md
rust_crawler/: Cargo.toml
(+65 files in other folders)
