[package]
name = "explot_cve_2019_11229"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", default-features = false, features = ["rustls-tls", "cookies"]}
tokio = {version = "1", features = ["full"]}
anyhow = "1.0"
regex = "1.5"
tempfile = "3"
actix-web = "4.0"
actix-files = "0.6"
actix-service = "2.0"
rand = "0.8"
url = "2"
cookie = {version = "0.18", features = ["percent-encode"]}